# RoverTests26

./: README.md  setup.sh
docs/plans/: 2026-02-21-autonav-design.md  2026-02-21-autonav-implementation.md
install/: local_setup.sh  setup.sh
install/rover_autonav/lib/rover_autonav/: motor_driver.py
install/rover_autonav/share/ament_index/resource_index/package_run_dependencies/: rover_autonav
install/rover_autonav/share/ament_index/resource_index/parent_prefix_path/: rover_autonav
install/rover_autonav/share/rover_autonav/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rover_autonav/share/rover_autonav/cmake/: rover_autonavConfig-version.cmake  rover_autonavConfig.cmake
install/rover_autonav/share/rover_autonav/config/: nav2_params.yaml  zed_config.yaml
install/rover_autonav/share/rover_autonav/description/: rover.urdf.xacro
install/rover_autonav/share/rover_autonav/environment/: ament_prefix_path.dsv  path.dsv
install/rover_autonav/share/rover_autonav/launch/: autonav.launch.py  foxglove.launch.py  motors.launch.py  nav2.launch.py  zed.launch.py
log/: latest_build
src/rover_autonav/: CMakeLists.txt  package.xml
src/rover_autonav/config/: nav2_params.yaml  zed_config.yaml
src/rover_autonav/description/: rover.urdf.xacro
src/rover_autonav/launch/: autonav.launch.py  foxglove.launch.py  motors.launch.py  nav2.launch.py  zed.launch.py
src/rover_autonav/src/: motor_driver.py
